platforms/gitea/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitea-tailscale
  namespace: gitea
  annotations:
    tailscale.com/hostname: gitea
    external-dns.kubernetes.io/hostname: gitea.home.arpa
spec:
  type: LoadBalancer
  loadBalancerClass: tailscale
  selector:
    app.kubernetes.io/instance: gitea
    app.kubernetes.io/name: gitea
  ports:
    - name: http
      port: 80
      targetPort: 3000
      protocol: TCP
    - name: ssh
      port: 22
      targetPort: 2222
      protocol: TCP
