platforms/gitea/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gitea-tailscale
  namespace: gitea
spec:
  ingressClassName: tailscale
  rules:
    - host: gitea.home.arpa
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gitea-tailscale
                port:
                  number: 3000
